2007-06-03  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* src/gstsphinxsink.c: (gst_sphinx_sink_class_init),
	(gst_sphinx_sink_start), (gst_sphinx_sink_render):
	* src/gstsphinxsink.h:
	* src/voice-control.c: (on_sink_initialization),
	(voice_control_applet_create_pipeline), (main):
	
	Threading problems seems to be solved.

2007-06-03  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* configure.ac:
	* lang/desktop-control.fsg:
	* src/action.c: (do_action):
	* src/action.h:
	* src/gstsphinxsink.c: (gst_sphinx_sink_base_init),
	(gst_sphinx_sink_start), (gst_sphinx_sink_render):
	* src/gstsphinxsink.h:
	* src/voice-control.c: (on_sink_calibration), (on_sink_listening),
	(on_sink_ready), (on_sink_message), (voice_control_applet_init),
	(main):
	
	Window actions through libwnck

2007-06-03  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* lang/desktop-control.dict:
	* lang/desktop-control.fsg:
	* src/action.c: (do_action):
	* src/action.h:
	* src/gstsphinxsink.c: (gst_sphinx_sink_render):
	* src/voice-control.c: (on_sink_message),
	(setup_voice_control_widget),
	(voice_control_applet_create_pipeline), (main):
	
	Real command execution like terminal or browser.

2007-06-03  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* Makefile.am:
	* configure.ac:
	* lang/Makefile.am:
	* lang/desktop-control.dict:
	* lang/desktop-control.fsg:
	* src/gstsphinxsink.c: (gst_sphinx_sink_class_init),
	(gst_sphinx_sink_start), (gst_sphinx_sink_render):
	* src/gstsphinxsink.h:
	* src/voice-control.c: (control_start), (control_stop),
	(on_sink_calibration), (on_sink_listening), (on_sink_ready),
	(set_tooltip), (setup_voice_control_widget),
	(voice_control_applet_create_pipeline):

2007-05-22  Raphael Nunes da Motta  <raphael@arthemis>

	* configure.ac:
	* src/action.c: (do_action):
	* src/action.h:
	* src/voice-control.c: (main):

        Some actions over active windows implemented.

2007-05-23  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* src/Makefile.am: