@@ -1,1 +1,18 @@
-SUBDIRS = help lang data src
+SUBDIRS = help lang data src po
+
+# Applications 
+
+intltool_extra = intltool-extract.in intltool-merge.in intltool-update.in
+
+EXTRA_DIST = $(intltool_extra) gnome-doc-utils.make
+
+DISTCLEANFILES = 		\
+	gnome-doc-utils.make	\
+	intltool-extract 	\
+	intltool-merge 		\
+	intltool-update
+
+DISTCHECK_CONFIGURE_FLAGS = --disable-schemas-install --disable-scrollkeeper --enable-gtk-doc
+
+# Ignore scrollkeeper issues for now.  @#*$& scrollkeeper
+distuninstallcheck_listfiles = find . -type f -print | grep -v scrollkeeper | grep -v /share/gnome/help/ | grep -v \.omf
