@@ -3,3 +3,5 @@ languagedir=$(datadir)/gnome-voice-control
 language_DATA=\
 	desktop-control.dict \
 	desktop-control.fsg
+
+EXTRA_DIST = $(language_DATA)
